# scrapy_redis_bf

./: README.md  pyproject.toml  requirements.txt
src/scrapy_redis_bf/: defaults.py  dupefilter.py  exception.py  scheduler.py
src/scrapy_redis_bf.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
tests/: redisbloom.py
tests/tests/: settings.py
tests/tests/spiders/: test.py
