[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "scrapy-redis-bf"
version = "0.0.9"
authors = [
  { name="kanade", email="kanade@blisst.cn" },
]
description = "scrapy_redis use bloomfilter"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "scrapy-redis >= 0.6.8",
]

[project.urls]
"Homepage" = "https://github.com/kanadeblisst/scrapy_redis_bf"
"Bug Tracker" = "https://github.com/kanadeblisst/scrapy_redis_bf/issues"